# codecov2git

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: nix-flake-check.yml
src/: coverage.rs  main.rs
